Task 1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
  - name: hello-world-application-ports
    protocol: TCP
    port: 8080
    targetPort: 80
  type: LoadBalancer
