Task 1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: squareshift.task1.app
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-world-service
              port: 
                number: 8080
